Company 1:0 Filtern und Sortieren (SearchSpec)

--- a/src/Tests/Tests.csproj
+++ b/src/Tests/Tests.csproj
@@ -73,6 +73,7 @@
   <ItemGroup>
     <Compile Include="BaseTest.cs" />
     <Compile Include="Integration.Persistence\Company_persistence_tests.cs" />
+    <Compile Include="Arrange\Arrange_companies.cs" />
     <Compile Include="Integration.Persistence\Person_persistence_tests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
