--- a/src/Core/Core.csproj
+++ b/src/Core/Core.csproj
@@ -71,6 +71,9 @@
     <Compile Include="Domain\Company\Persistence\CompanyMap.cs" />
     <Compile Include="Domain\Company\Persistence\CompanyRepository.cs" />
     <Compile Include="Domain\Company\Persistence\CompanySearchSpec.cs" />
+    <Compile Include="Domain\Newsletter\Persistence\NewsletterMap.cs" />
+    <Compile Include="Domain\Newsletter\Persistence\NewsletterRepository.cs" />
+    <Compile Include="Domain\Newsletter\Newsletter.cs" />
     <Compile Include="Domain\Person\Persistence\PersonMap.cs" />
     <Compile Include="Domain\Person\Persistence\PersonRepository.cs" />
     <Compile Include="Domain\Person\Person.cs" />
@@ -86,6 +89,7 @@
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
