--- a/src/Tests/Tests.csproj
+++ b/src/Tests/Tests.csproj
@@ -71,6 +71,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Arrange\Arrange_newsletter.cs" />
+    <Compile Include="Arrange\Arrange_persons.cs" />
     <Compile Include="BaseTest.cs" />
     <Compile Include="Integration.Persistence\Company_persistence_tests.cs" />
     <Compile Include="Arrange\Arrange_companies.cs" />
