--- a/src/Frontend.Web/Frontend.Web.csproj
+++ b/src/Frontend.Web/Frontend.Web.csproj
@@ -62,10 +62,12 @@
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\SearchController.cs" />
+    <Compile Include="Controllers\SupporterController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Models\AccountModels.cs" />
+    <Compile Include="Models\SupporterModels.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -185,6 +187,10 @@
     <Content Include="Views\Search\Details.cshtml" />
     <Content Include="Views\Shared\_UserMessage.cshtml" />
     <Content Include="Views\Shared\_PartialPage1.cshtml" />
+    <Content Include="Views\Supporter\Company.cshtml" />
+    <Content Include="Views\Supporter\Person.cshtml" />
+    <Content Include="Views\Supporter\Association.cshtml" />
+    <Content Include="Views\Supporter\Politician.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Core\Core.csproj">
