--- a/src/Frontend.Web/packages.config
+++ b/src/Frontend.Web/packages.config
@@ -5,4 +5,5 @@
   <package id="jQuery.Validation" version="1.9" />
   <package id="jQuery.vsdoc" version="1.6" />
   <package id="jQuery" version="1.7.1" />
+  <package id="AutoMapper" version="2.0.0" />
 </packages>
