--- a/src/Tests/Tests.csproj
+++ b/src/Tests/Tests.csproj
@@ -39,6 +39,9 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\packages\Autofac.2.5.2.830\lib\NET40\Autofac.Configuration.dll</HintPath>
     </Reference>
+    <Reference Include="AutoMapper">
+      <HintPath>..\packages\AutoMapper.2.0.0\lib\net40-client\AutoMapper.dll</HintPath>
+    </Reference>
     <Reference Include="FluentNHibernate, Version=1.3.0.717, Culture=neutral, PublicKeyToken=8aa435e3cb308880, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\packages\FluentNHibernate.1.3.0.717\lib\FluentNHibernate.dll</HintPath>
@@ -77,7 +80,8 @@
     <Compile Include="Arrange\Arrange_newsletter.cs" />
     <Compile Include="Arrange\Arrange_persons.cs" />
     <Compile Include="BaseTest.cs" />
-    <Compile Include="Integration.Persistence\Organisation_persistence_tests.cs" />
+    <Compile Include="Organisation\Organisation_model_mapping.cs" />
+    <Compile Include="Organisation\Organisation_persistence_tests.cs" />
     <Compile Include="Arrange\Arrange_organisations.cs" />
     <Compile Include="Integration.Persistence\Newsletter_persistence_tests.cs" />
     <Compile Include="Integration.Persistence\Person_persistence_tests.cs" />
@@ -92,6 +96,13 @@
       <Project>{7F462313-60E9-4EE6-820A-E8D47392B2A9}</Project>
       <Name>Core</Name>
     </ProjectReference>
+    <ProjectReference Include="..\Frontend.Web\Frontend.Web.csproj">
+      <Project>{F0BE1B5B-4DA4-470D-8358-29CA106AC61D}</Project>
+      <Name>Frontend.Web</Name>
+    </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Persistence\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
