--- a/src/Tests/packages.config
+++ b/src/Tests/packages.config
@@ -6,4 +6,5 @@
   <package id="Seedworks.Persistence" version="0.8.2.14" />
   <package id="NUnit" version="2.5.10.11092" />
   <package id="Autofac" version="2.5.2.830" />
+  <package id="AutoMapper" version="2.0.0" />
 </packages>
