--- a/src/Frontend.Web/Web.config
+++ b/src/Frontend.Web/Web.config
@@ -6,9 +6,7 @@
 
 <configuration>
   <connectionStrings>
-    <add name="ApplicationServices"
-         connectionString="data source=.\SQLEXPRESS;Integrated Security=SSPI;AttachDBFilename=|DataDirectory|aspnetdb.mdf;User Instance=true"
-         providerName="System.Data.SqlClient" />
+    <add name="main" connectionString ="Server=(local);Database=GWOE_Test;uid=GoewDb;pwd=fooBar4563"/>
   </connectionStrings>
 
   <appSettings>
