--- a/src/Frontend.Web/packages.config
+++ b/src/Frontend.Web/packages.config
@@ -6,4 +6,6 @@
   <package id="jQuery.vsdoc" version="1.6" />
   <package id="jQuery" version="1.7.1" />
   <package id="AutoMapper" version="2.0.0" />
+  <package id="Autofac" version="2.5.2.830" />
+  <package id="Autofac.Mvc3" version="2.5.2.830" />
 </packages>
