--- a/src/Frontend.Web/packages.config
+++ b/src/Frontend.Web/packages.config
@@ -1,11 +1,14 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Modernizr" version="1.7" />
+  <package id="Autofac" version="2.5.2.830" />
+  <package id="Autofac.Mvc3" version="2.5.2.830" />
+  <package id="AutoMapper" version="2.0.0" />
+  <package id="DataAnnotationsExtensions" version="1.0.1" />
+  <package id="DataAnnotationsExtensions.MVC3" version="1.0.1" />
+  <package id="jQuery" version="1.7.1" />
   <package id="jQuery.UI.Combined" version="1.8.17" />
   <package id="jQuery.Validation" version="1.9" />
   <package id="jQuery.vsdoc" version="1.6" />
-  <package id="jQuery" version="1.7.1" />
-  <package id="AutoMapper" version="2.0.0" />
-  <package id="Autofac" version="2.5.2.830" />
-  <package id="Autofac.Mvc3" version="2.5.2.830" />
+  <package id="Modernizr" version="1.7" />
+  <package id="WebActivator" version="1.2.0.0" />
 </packages>
