--- a/src/Frontend.Web/Web.config
+++ b/src/Frontend.Web/Web.config
@@ -6,7 +6,7 @@
 
 <configuration>
   <connectionStrings>
-    <add name="main" connectionString ="Server=(local);Database=GWOE_Test;uid=GoewDb;pwd=fooBar4563"/>
+    <add name="main" connectionString ="Server=(local);Database=GWOE;uid=GoewDb;pwd=fooBar4563"/>
   </connectionStrings>
 
   <appSettings>
