--- a/src/Core/packages.config
+++ b/src/Core/packages.config
@@ -1,8 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Autofac" version="2.6.1.841" />
+  <package id="Autofac.Mvc3" version="2.6.1.841" />
+  <package id="CsvHelper" version="1.3" />
+  <package id="FluentNHibernate" version="1.3.0.717" />
   <package id="Iesi.Collections" version="3.2.0.4000" />
   <package id="NHibernate" version="3.2.0.4000" />
-  <package id="FluentNHibernate" version="1.3.0.717" />
   <package id="Seedworks.Persistence" version="0.8.2.14" />
-  <package id="Autofac" version="2.5.2.830" />
 </packages>
