--- a/src/Frontend.Web/packages.config
+++ b/src/Frontend.Web/packages.config
@@ -1,8 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Autofac" version="2.5.2.830" />
+  <package id="Autofac" version="2.6.1.841" />
   <package id="Autofac.Mvc3" version="2.5.2.830" />
   <package id="AutoMapper" version="2.0.0" />
+  <package id="CsvHelper" version="1.3" />
   <package id="DataAnnotationsExtensions" version="1.0.1" />
   <package id="DataAnnotationsExtensions.MVC3" version="1.0.1" />
   <package id="jQuery" version="1.7.1" />
