--- a/src/Core/Core.csproj
+++ b/src/Core/Core.csproj
@@ -87,6 +87,7 @@
     <Compile Include="Infrastructure\Persistence\SpecFilterBase.cs" />
     <Compile Include="Infrastructure\Persistence\SpecOrderByBase.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Tools\Importer.cs" />
     <Compile Include="Web\Message\Message.cs" />
     <Compile Include="Web\Message\MessageHtml.cs" />
     <Compile Include="Web\Message\MessageType.cs" />
