--- a/src/Tests/Tests.csproj
+++ b/src/Tests/Tests.csproj
@@ -86,6 +86,7 @@
     <Compile Include="Integration.Persistence\Newsletter_persistence_tests.cs" />
     <Compile Include="Integration.Persistence\Person_persistence_tests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Tools\Importer.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
