--- a/src/Frontend.Web/packages.config
+++ b/src/Frontend.Web/packages.config
@@ -11,5 +11,6 @@
   <package id="jQuery.Validation" version="1.9" />
   <package id="jQuery.vsdoc" version="1.6" />
   <package id="Modernizr" version="1.7" />
+  <package id="Seedworks.Web.State" version="0.8.2.3" />
   <package id="WebActivator" version="1.2.0.0" />
 </packages>
