--- a/src/Core/packages.config
+++ b/src/Core/packages.config
@@ -7,4 +7,5 @@
   <package id="Iesi.Collections" version="3.2.0.4000" />
   <package id="NHibernate" version="3.2.0.4000" />
   <package id="Seedworks.Persistence" version="0.8.2.14" />
+  <package id="Seedworks.Web.State" version="0.8.2.3" />
 </packages>
