--- a/src/Core/packages.config
+++ b/src/Core/packages.config
@@ -5,7 +5,10 @@
   <package id="CsvHelper" version="1.3" />
   <package id="FluentNHibernate" version="1.3.0.717" />
   <package id="Iesi.Collections" version="3.2.0.4000" />
+  <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" />
   <package id="NHibernate" version="3.2.0.4000" />
+  <package id="NHibernateProfiler" version="1.0.0.937" />
   <package id="Seedworks.Persistence" version="0.8.2.14" />
   <package id="Seedworks.Web.State" version="0.8.2.3" />
+  <package id="WebActivator" version="1.4.4" />
 </packages>
