--- a/src/Frontend.Web/packages.config
+++ b/src/Frontend.Web/packages.config
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Autofac" version="2.6.1.841" />
-  <package id="Autofac.Mvc3" version="2.5.2.830" />
+  <package id="Autofac.Mvc3" version="2.6.1.841" />
   <package id="AutoMapper" version="2.0.0" />
   <package id="CsvHelper" version="1.3" />
   <package id="DataAnnotationsExtensions" version="1.0.1" />
@@ -10,7 +10,9 @@
   <package id="jQuery.UI.Combined" version="1.8.17" />
   <package id="jQuery.Validation" version="1.9" />
   <package id="jQuery.vsdoc" version="1.6" />
+  <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" />
   <package id="Modernizr" version="1.7" />
+  <package id="NHibernateProfiler" version="1.0.0.937" />
   <package id="Seedworks.Web.State" version="0.8.2.3" />
-  <package id="WebActivator" version="1.2.0.0" />
+  <package id="WebActivator" version="1.4.4" />
 </packages>
