--- a/src/Core/Core.csproj
+++ b/src/Core/Core.csproj
@@ -130,6 +130,7 @@
     <Compile Include="Tools\Updater\Steps\UpdateToVs1InitialStep.cs" />
     <Compile Include="Tools\Updater\Updater.cs" />
     <Compile Include="Tools\Updater\UpdateStepExecuter.cs" />
+    <Compile Include="Web\Context\SessionSearchPage.cs" />
     <Compile Include="Web\Context\SessionUser.cs" />
     <Compile Include="Web\Message\Message.cs" />
     <Compile Include="Web\Message\MessageHtml.cs" />
