--- a/src/Frontend.Web/Web.config
+++ b/src/Frontend.Web/Web.config
@@ -69,6 +69,10 @@
         <assemblyIdentity name="Autofac" publicKeyToken="17863af14b0044da" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-2.6.1.841" newVersion="2.6.1.841" />
       </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="NHibernate" publicKeyToken="aa95f207798dfdb4" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-3.3.0.4000" newVersion="3.3.0.4000" />
+      </dependentAssembly>
     </assemblyBinding>
   </runtime>
 </configuration>
