scaffolding search pages

--- a/src/Core/Core.csproj
+++ b/src/Core/Core.csproj
@@ -96,6 +96,7 @@
     <Compile Include="Domain\Stakeholders\Club\Persistence\ClubSearchSpec.cs" />
     <Compile Include="Domain\Stakeholders\Company\Ops\CsvExporter.cs" />
     <Compile Include="Domain\Stakeholders\Company\Company.cs" />
+    <Compile Include="Domain\Stakeholders\Company\Persistence\CompanyMap.cs" />
     <Compile Include="Domain\Stakeholders\Company\Persistence\CompanyRepository.cs" />
     <Compile Include="Domain\Stakeholders\Company\Persistence\CompanySearchSpec.cs" />
     <Compile Include="Domain\Newsletter\Persistence\NewsletterMap.cs" />
