--- a/src/Frontend.Web/Frontend.Web.csproj
+++ b/src/Frontend.Web/Frontend.Web.csproj
@@ -106,9 +106,19 @@
     <Compile Include="Controllers\Admin\AdminController.cs" />
     <Compile Include="Controllers\Admin\AdminWelcomeModel.cs" />
     <Compile Include="Controllers\HomeController.cs" />
-    <Compile Include="Controllers\Search\SearchCompanyController.cs" />
-    <Compile Include="Controllers\Search\SearchCompanyModel.cs" />
-    <Compile Include="Controllers\Search\SearchModelCompanyDetail.cs" />
+    <Compile Include="Controllers\Search\Club\SearchClubController.cs" />
+    <Compile Include="Controllers\Search\Club\SearchClubModel.cs" />
+    <Compile Include="Controllers\Search\Club\SearchClubModelDetail.cs" />
+    <Compile Include="Controllers\Search\Company\SearchCompanyController.cs" />
+    <Compile Include="Controllers\Search\Company\SearchCompanyModel.cs" />
+    <Compile Include="Controllers\Search\Person\SearchPersonController.cs" />
+    <Compile Include="Controllers\Search\Person\SearchPersonModel.cs" />
+    <Compile Include="Controllers\Search\Person\SearchPersonModelDetail.cs" />
+    <Compile Include="Controllers\Search\Politician\SearchPoliticianModelDetail.cs" />
+    <Compile Include="Controllers\Search\Politician\SearchPoliticianController.cs" />
+    <Compile Include="Controllers\Search\Politician\SearchPoliticianModel.cs" />
+    <Compile Include="Controllers\Search\SearchModelBase.cs" />
+    <Compile Include="Controllers\Search\Company\SearchCompanyModelDetail.cs" />
     <Compile Include="Controllers\Supporters\SupporterCompanyModel2Entity.cs" />
     <Compile Include="Controllers\Supporters\SupporterController.cs" />
     <Compile Include="Global.asax.cs">
@@ -199,6 +209,9 @@
     <Content Include="Scripts\modernizr-1.7.min.js" />
     <Content Include="Views\Admin\Welcome.cshtml" />
     <Content Include="Views\Shared\_Pager.cshtml" />
+    <Content Include="Views\SearchClub\Search.cshtml" />
+    <Content Include="Views\SearchPerson\Search.cshtml" />
+    <Content Include="Views\SearchPolitician\Search.cshtml" />
     <None Include="Web.config" />
     <Content Include="Scripts\jquery.unobtrusive-ajax.js" />
     <Content Include="Scripts\jquery.unobtrusive-ajax.min.js" />
